[fix] modification overflow and StaggerChildren

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -42,7 +42,7 @@ body {
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 * {
